# free-fall-detection-cpp

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
detector/: CMakeLists.txt
detector/src/: main.cpp
drivers/: CMakeLists.txt
drivers/include/drivers/: i2c_driver.h  imu_driver.h
drivers/src/: i2c_driver.c
resources/: config.ini
simulator/: CMakeLists.txt
simulator/src/: main.cpp
